--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,13 @@
 # Site navigation links
 
-- title: Projects
-  url: /projects/
+- title: Home
+  url: /
+
+- title: Blog
+  url: /blog/
+
+- title: Paper-review
+  url: /Paper-review/
+
+- title: About
+  url: /about/
