--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/profile_image.jpg'
 background:         'assets/img/light.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://sangyeop-kim.github.io/
+url:                https://sangyeop-kim.github.io
 
 # Jekyll
 permalink:          /:title/
